--- a/index.html
+++ b/index.html
@@ -2191,6 +2191,7 @@
             // Noche
             { n: "RODOLFO ULLOA", b: "NOCHE" },
             { n: "RICARDO MEDINA", b: "NOCHE" },
+            { n: "JOSE RAMIREZ", b: "NOCHE" },
             { n: "ROSA SMART", b: "NOCHE" },
             { n: "MARIA LAZCANO", b: "NOCHE" },
             { n: "ISAAC MAGUIÑA", b: "NOCHE" },
