--- a/index.html
+++ b/index.html
@@ -2177,15 +2177,11 @@
             { n: "DANIELA SOLORZA", b: "DIA" },
             { n: "SILVIA GONZALEZ", b: "DIA" },
             { n: "SILVIA VILLALOBOS", b: "DIA" },
-            { n: "LAURA SOTO", b: "DIA" },
             { n: "SCARLETH VILLARROEL", b: "DIA" },
-            { n: "JOSE RAMIREZ", b: "DIA" },
             { n: "JACKSON JOSEPH", b: "DIA" },
             { n: "GALINDO SAEZ", b: "DIA" },
             { n: "MELANIE FORLIVESI", b: "DIA" },
             { n: "CLAUDIA NUÑEZ", b: "DIA" },
-            { n: "PATRICIA CERDA", b: "DIA" },
-            { n: "GLORIA ANGEL", b: "DIA" },
             { n: "CRISTIAN MALDONADO", b: "DIA" },
             { n: "FABIAN FERNANDEZ", b: "DIA" },
             // Noche
@@ -2199,8 +2195,7 @@
             { n: "AXIS MAURICE", b: "NOCHE" },
             { n: "VICTOR SANCHEZ", b: "NOCHE" },
             { n: "VITEL DESROSIERS", b: "NOCHE" },
-            { n: "VERONICA ORTIZ", b: "NOCHE" },
-            { n: "MARISOL AGUIRRE", b: "NOCHE" }
+            { n: "VERONICA ORTIZ", b: "NOCHE" }
         ];
 
         // === CATÁLOGO DE ASIGNACIONES (multi) ===
