--- a/index.html
+++ b/index.html
@@ -2184,6 +2184,7 @@
             { n: "CLAUDIA NUÑEZ", b: "DIA" },
             { n: "CRISTIAN MALDONADO", b: "DIA" },
             { n: "FABIAN FERNANDEZ", b: "DIA" },
+            { n: "MELYSSA SEPULVEDA", b: "DIA" },
             // Noche
             { n: "RODOLFO ULLOA", b: "NOCHE" },
             { n: "RICARDO MEDINA", b: "NOCHE" },
@@ -2203,15 +2204,16 @@
             "CORPORATIVO",
             "SALA DE CAPACITACION",
             "ISLA DE OPERACIONES",
-            "TALLER",
-            "BARRIDO",
-            "BARRIDO Y MOPEO",
+            "CORPORATIVO TALLER",
+            "BARRIDO DE BUSES",
+            "BARRIDO Y TRAPEADO DE BUSES",
             "FULL (BARRIDO, MOPEO, GRAFFITI, GOMAS, FIERROS, CABINA)",
             "CABINA",
             "BANDEJON",
             "ESTACIONAMIENTOS",
-            "FRONTIS TERMINAL",
-            "BARRIDO PATIO"
+            "BARRIDO FRONTIS TERMINAL",
+            "CABEZAL AEROPUERTO",
+            "BARRIDO DEL PATIO"
         ];
 
         // === ISLAS ACTUALIZADAS ===
